--- a/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
@@ -60,7 +60,7 @@
     .boton-IS, .boton-RG {
         width: 100%;
         height: 45px;
-        background:#bcbcbc;
+        background: #898989;
         border: none;
         border-radius: 25px;
         color: white;
@@ -74,7 +74,7 @@
     }
 
         .boton-IS:hover, .boton-RG:hover {
-            background-color: #969696;
+            background-color: #6f6f6f;
         }
 
     #olvidadoContrasena {
