--- a/ProyectoFinal_ActivosFijos/Views/Register/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Register/Index.cshtml
@@ -9,7 +9,7 @@
 
     <style>
         body {
-            background-image: url('https://img.freepik.com/free-vector/gradient-liquid-abstract-background_23-2148917280.jpg?w=1380&t=st=1723601297~exp=1723601897~hmac=1d08567b37b1e8a1be391fecb690827a90b729a01434515f3d0fa434f5a79af9');
+            background-image: url('/images/BackgroundToyota.jpg');
             background-size: cover;
             background-position: center;
             background-color: white;
@@ -62,21 +62,21 @@
         }
 
         .boton-IS {
-            background-color: #969696;
+            background-color: #898989;
             color: white;
         }
 
             .boton-IS:hover {
-                background-color: #707070;
+                background-color: #6f6f6f;
             }
 
         .boton-RG {
-            background-color: #f70a0a;
+            background-color: #898989;
             color: white;
         }
 
             .boton-RG:hover {
-                background-color: #bc0f0f;
+                background-color: #6f6f6f;
             }
     </style>
 
