--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
@@ -3,6 +3,18 @@
     ViewBag.Title = "Add Usuario";
     Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
+
+<style>
+/*    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }*/
+ 
+</style>
 <div class="container mt-4">
 
     <h2 class="mb-4">Lista de Usuarios</h2>
@@ -11,7 +23,7 @@
 
     <div class="table-responsive">
         <table class="table table-bordered">
-            <thead class="thead-dark">
+            <thead class="thead-light">
                 <tr>
                     <th>Cedula</th>
                     <th>Nombre</th>
