--- a/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
@@ -5,110 +5,142 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
-<div class="container">
+<style>
+    body {
+        background-color: white;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .img-thumbnail {
+        width: 100%;
+        max-width: 200px;
+        height: auto;
+    }
+
+    h2 {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .container-add {
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    }
+</style>
+
+<h2>Editar un Carro</h2>
+<div class="container-add">
     @using (Html.BeginForm("Edit", "Carros", FormMethod.Post, new { enctype = "multipart/form-data", @class = "row g-3" }))
     {
+        <div class="row">
+            @Html.HiddenFor(model => model.Id)
 
-        @Html.HiddenFor(model => model.Id)
-
-
-        <div class="col-md-6">
-            @Html.LabelFor(model => model.Marca, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Marca, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Marca, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="col-md-6">
-            @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.Anio, htmlAttributes: new { @class = "control-label" })
-            @Html.TextAreaFor(model => model.Anio, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Anio, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="col-md-6">
-            @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Transmision, htmlAttributes: new { @class = "control-label" })
-            @Html.DropDownListFor(model => model.Transmision, new SelectList(new List<SelectListItem> {
-                new SelectListItem { Text = "Transmisión Automática", Value = "Transmisión Automática" },
-                new SelectListItem { Text = "Transmisión Manual", Value = "Transmisión Manual" },
-                new SelectListItem { Text = "Transmisión Continuamente Variable", Value = "Transmisión Continuamente Variable" },
-                new SelectListItem { Text = "Transmisión Automática de Doble Embrague", Value = "Transmisión Automática de Doble Embrague" }
-            }, "Value", "Text", Model.Transmision), "Selecciona la transmision", new { @class = "form-control" })
-
-            @Html.ValidationMessageFor(model => model.Transmision, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Combustible, htmlAttributes: new { @class = "control-label" })
-            @Html.DropDownListFor(model => model.Combustible, new SelectList(new List<SelectListItem> {
-                new SelectListItem { Text = "Gasolina", Value = "Gasolina" },
-                new SelectListItem { Text = "Diésel", Value = "Diésel" },
-                new SelectListItem { Text = "Electricidad", Value = "Electricidad" }
-            }, "Value", "Text", Model.Combustible), "Selecciona el combustible", new { @class = "form-control" })
-
-            @Html.ValidationMessageFor(model => model.Combustible, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="col-md-6">
-            @Html.LabelFor(model => model.CantidadEnStock, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.CantidadEnStock, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CantidadEnStock, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="col-md-6">
-            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-        </div>
-
-
-        <!-- Tarjeta de Imágenes -->
-        <div class="row mt-4">
-            <div class="row">
-
-                <div class="col-md-4">
-                    <label class="form-label">Imagen 1</label>
-                    <input class="form-control" type="file" name="NuevaImagen1" onchange="mostrarImagenCargada(this, 'Imagen1', 'imagenActual1', 'contenedorImagen1')" />
-                    <div id="contenedorImagen1" class="mt-3">
-                        @if (Model.Imagen1 != null && Model.Imagen1.Length > 0)
-                        {
-                            <img id="imagenActual1" src="data:image;base64,@Convert.ToBase64String(Model.Imagen1)" class="img-thumbnail" alt="Imagen actual 1" />
-                        }
-                        else
-                        {
-                            <img id="imagenActual1" src="#" class="img-thumbnail" alt="Nueva imagen 1" style="display: none;" />
-                        }
-                    </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Marca, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Marca, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Marca, "", new { @class = "text-danger" })
                 </div>
 
-                <div class="col-md-4">
-                    <label class="form-label">Imagen 2</label>
-                    <input class="form-control" type="file" name="NuevaImagen2" onchange="mostrarImagenCargada(this, 'Imagen2', 'imagenActual2', 'contenedorImagen2')" />
-                    <div id="contenedorImagen2" class="mt-3">
-                        @if (Model.Imagen2 != null && Model.Imagen2.Length > 0)
-                        {
-                            <img id="imagenActual2" src="data:image;base64,@Convert.ToBase64String(Model.Imagen2)" class="img-thumbnail" alt="Imagen actual 2" />
-                        }
-                        else
-                        {
-                            <img id="imagenActual2" src="#" class="img-thumbnail" alt="Nueva imagen 2" style="display: none;" />
-                        }
-                    </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
                 </div>
 
-                <div class="col-12 mt-4">
-                    <input type="submit" value="Editar" class="btn btn-success" />
-                    <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Carros/Index")'" />
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Anio, htmlAttributes: new { @class = "control-label" })
+                    @Html.TextAreaFor(model => model.Anio, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Anio, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Transmision, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.Transmision, new SelectList(new List<SelectListItem> {
+                        new SelectListItem { Text = "Transmisión Automática", Value = "Transmisión Automática" },
+                        new SelectListItem { Text = "Transmisión Manual", Value = "Transmisión Manual" },
+                        new SelectListItem { Text = "Transmisión Continuamente Variable", Value = "Transmisión Continuamente Variable" },
+                        new SelectListItem { Text = "Transmisión Automática de Doble Embrague", Value = "Transmisión Automática de Doble Embrague" }
+                    }, "Value", "Text", Model.Transmision), "Selecciona la transmision", new { @class = "form-control" })
+
+                    @Html.ValidationMessageFor(model => model.Transmision, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Combustible, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.Combustible, new SelectList(new List<SelectListItem> {
+                        new SelectListItem { Text = "Gasolina", Value = "Gasolina" },
+                        new SelectListItem { Text = "Diésel", Value = "Diésel" },
+                        new SelectListItem { Text = "Electricidad", Value = "Electricidad" }
+                    }, "Value", "Text", Model.Combustible), "Selecciona el combustible", new { @class = "form-control" })
+
+                    @Html.ValidationMessageFor(model => model.Combustible, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.CantidadEnStock, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.CantidadEnStock, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CantidadEnStock, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                </div>
+
+
+                <!-- Tarjeta de Imágenes -->
+                <div class="row mt-4">
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <label class="form-label">Imagen 1</label>
+                            <input class="form-control" type="file" name="NuevaImagen1" onchange="mostrarImagenCargada(this, 'Imagen1', 'imagenActual1', 'contenedorImagen1')" />
+                            <div id="contenedorImagen1" class="mt-3">
+                                @if (Model.Imagen1 != null && Model.Imagen1.Length > 0)
+                                {
+                                    <img id="imagenActual1" src="data:image;base64,@Convert.ToBase64String(Model.Imagen1)" class="img-thumbnail" alt="Imagen actual 1" />
+                                }
+                                else
+                                {
+                                    <img id="imagenActual1" src="#" class="img-thumbnail" alt="Nueva imagen 1" style="display: none;" />
+                                }
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="form-label">Imagen 2</label>
+                            <input class="form-control" type="file" name="NuevaImagen2" onchange="mostrarImagenCargada(this, 'Imagen2', 'imagenActual2', 'contenedorImagen2')" />
+                            <div id="contenedorImagen2" class="mt-3">
+                                @if (Model.Imagen2 != null && Model.Imagen2.Length > 0)
+                                {
+                                    <img id="imagenActual2" src="data:image;base64,@Convert.ToBase64String(Model.Imagen2)" class="img-thumbnail" alt="Imagen actual 2" />
+                                }
+                                else
+                                {
+                                    <img id="imagenActual2" src="#" class="img-thumbnail" alt="Nueva imagen 2" style="display: none;" />
+                                }
+                            </div>
+                        </div>
+
+                        <div class="col-12 mt-4">
+                            <input type="submit" value="Editar" class="btn btn-success" />
+                            <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Carros/Index")'" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -150,6 +182,13 @@
 
 
 <style>
+    .container {
+        background-color: white;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
     .img-thumbnail {
         width: 100%;
         max-width: 200px;
