--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/Edit.cshtml
@@ -6,117 +6,155 @@
 }
 
 
-<div class="container">
-    @using (Html.BeginForm("Edit", "Repuesto", FormMethod.Post, new { enctype = "multipart/form-data", @class = "row g-3" }))
-    {
-
-        @Html.HiddenFor(model => model.Id)
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-        </div><div class="form-group">
-
-            @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
-
-        </div><div class="form-group">
-            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Marca, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Marca, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Marca, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Anio, htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.Anio, new { @class = "form-control", type = "text" })
-            @Html.ValidationMessageFor(model => model.Anio, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CantidadEnStock, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.CantidadEnStock, new { htmlAttributes = new { @class = "form-control", type = "text" } })
-            @Html.ValidationMessageFor(model => model.CantidadEnStock, "", new { @class = "text-danger" })
-        </div>
+<style>
+    body {
+        background-color: white;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    .img-thumbnail {
+        width: 100%;
+        max-width: 200px;
+        height: auto;
+    }
+    h2 {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .container-add {
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    }
 
 
+</style>
 
-        <div class="form-group">
+<h2>Editar un Repuesto</h2>   
+ <div class="container-add">
+        @using (Html.BeginForm("Edit", "Repuesto", FormMethod.Post, new { enctype = "multipart/form-data", @class = "row g-3" }))
+        {
+            <div class="row">
+
+                @Html.HiddenFor(model => model.Id)
+                
+                <div class="col-md-6">
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+
+                        @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+
+                    </div><div class="form-group">
+                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Marca, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Marca, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Marca, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
+                    </div>
+
+
+                </div>
+
+                <div class="col-md-6">
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Anio, htmlAttributes: new { @class = "control-label" })
+                        @Html.TextBoxFor(model => model.Anio, new { @class = "form-control", type = "text" })
+                        @Html.ValidationMessageFor(model => model.Anio, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.CantidadEnStock, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.CantidadEnStock, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+                        @Html.ValidationMessageFor(model => model.CantidadEnStock, "", new { @class = "text-danger" })
+                    </div>
+
+                    @*<div class="form-group">
             @Html.LabelFor(model => model.Imagen1, "Imagen")
             <input type="file" name="ImagenFile" id="ImagenFile" class="form-control" onchange="previewImage(this, 'previewImagen')" />
             <img id="previewImagen" style="max-width: 200px; max-height: 200px; margin-top: 10px;" />
-        </div>
+        </div>*@
 
-        <div class="form-group">
+                    @*<div class="form-group">
             @Html.LabelFor(model => model.Imagen2, "Imagen2")
             <input type="file" name="ImagenFile2" id="ImagenFile2" class="form-control" onchange="previewImage(this, 'previewImagen2')" />
             <img id="previewImagen2" style="max-width: 200px; max-height: 200px; margin-top: 10px;" />
-        </div>
+        </div>*@
 
+                    <!-- Tarjeta de Imágenes -->
+                    <div class="row mt-4">
+                        <div class="row">
 
-        <!-- Tarjeta de Imágenes -->
-        <div class="row mt-4">
-            <div class="row">
+                            <div class="col-md-4">
+                                <label class="form-label">Imagen 1</label>
+                                <input class="form-control" type="file" name="NuevaImagen1" onchange="mostrarImagenCargada(this, 'Imagen1', 'imagenActual1', 'contenedorImagen1')" />
+                                <div id="contenedorImagen1" class="mt-3">
+                                    @if (Model.Imagen1 != null && Model.Imagen1.Length > 0)
+                                    {
+                                        <img id="imagenActual1" src="data:image;base64,@Convert.ToBase64String(Model.Imagen1)" class="img-thumbnail" alt="Imagen actual 1" />
+                                    }
+                                    else
+                                    {
+                                        <img id="imagenActual1" src="#" class="img-thumbnail" alt="Nueva imagen 1" style="display: none;" />
+                                    }
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label class="form-label">Imagen 2</label>
+                                    <input class="form-control" type="file" name="NuevaImagen2" onchange="mostrarImagenCargada(this, 'Imagen2', 'imagenActual2', 'contenedorImagen2')" />
+                                    <div id="contenedorImagen2" class="mt-3">
+                                        @if (Model.Imagen2 != null && Model.Imagen2.Length > 0)
+                                        {
+                                            <img id="imagenActual2" src="data:image;base64,@Convert.ToBase64String(Model.Imagen2)" class="img-thumbnail" alt="Imagen actual 2" />
+                                        }
+                                        else
+                                        {
+                                            <img id="imagenActual2" src="#" class="img-thumbnail" alt="Nueva imagen 2" style="display: none;" />
+                                        }
+                                    </div>
+                                </div>
+                            </div>
 
-                <div class="col-md-4">
-                    <label class="form-label">Imagen 1</label>
-                    <input class="form-control" type="file" name="NuevaImagen1" onchange="mostrarImagenCargada(this, 'Imagen1', 'imagenActual1', 'contenedorImagen1')" />
-                    <div id="contenedorImagen1" class="mt-3">
-                        @if (Model.Imagen1 != null && Model.Imagen1.Length > 0)
-                        {
-                            <img id="imagenActual1" src="data:image;base64,@Convert.ToBase64String(Model.Imagen1)" class="img-thumbnail" alt="Imagen actual 1" />
-                        }
-                        else
-                        {
-                            <img id="imagenActual1" src="#" class="img-thumbnail" alt="Nueva imagen 1" style="display: none;" />
-                        }
+                            <div class="col-12 mt-4">
+                                <input type="submit" value="Editar" class="btn btn-success" />
+                                <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Repuesto/Index")'" />
+                            </div>
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-md-4">
-                    <label class="form-label">Imagen 2</label>
-                    <input class="form-control" type="file" name="NuevaImagen2" onchange="mostrarImagenCargada(this, 'Imagen2', 'imagenActual2', 'contenedorImagen2')" />
-                    <div id="contenedorImagen2" class="mt-3">
-                        @if (Model.Imagen2 != null && Model.Imagen2.Length > 0)
-                        {
-                            <img id="imagenActual2" src="data:image;base64,@Convert.ToBase64String(Model.Imagen2)" class="img-thumbnail" alt="Imagen actual 2" />
-                        }
-                        else
-                        {
-                            <img id="imagenActual2" src="#" class="img-thumbnail" alt="Nueva imagen 2" style="display: none;" />
-                        }
-                    </div>
-                </div>
-
-                <div class="col-12 mt-4">
-                    <input type="submit" value="Editar" class="btn btn-success" />
-                    <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Repuesto/Index")'" />
                 </div>
             </div>
-        </div>
 
-    }
-</div>
+
+         }
+    </div>
+
 
 <script>
     function mostrarImagenCargada(input, id, imagenId, contenedorId) {
@@ -151,10 +189,3 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-<style>
-    .img-thumbnail {
-        width: 100%;
-        max-width: 200px;
-        height: auto;
-    }
-</style>
