--- a/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_ClientLayout.cshtml
@@ -34,7 +34,7 @@
         }
 
         :root {
-            --color-primary: #ff2d2d;
+            --color-primary: #f70a0a;
             --color-white: #eaeaea;
             --color-dark: #333;
             --color-black: #222;
@@ -345,6 +345,7 @@
                 <li><a href="https://www.facebook.com/ToyotaCostaRica" target="_blank"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="https://x.com/toyotacr" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://www.instagram.com/toyotacostarica/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
