--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Add.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Add.cshtml
@@ -288,7 +288,10 @@
 <style>
     body {
         background-color: white;
-        font-family: Arial, sans-serif;
+        background-color: white;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
     h2 {
@@ -315,7 +318,7 @@
     .form-control {
         border: 1px solid #ced4da;
         border-radius: 5px;
-        padding: 10px;
+        /*padding: 10px;*/
     }
 
     input[type="submit"],
@@ -329,21 +332,25 @@
     }
 
         input[type="submit"].btn-primary {
-            background-color: #28a745;
+            background-color: #898989;
             color: white;
         }
+            input[type="submit"].btn-primary:hover {
+                background-color: #6f6f6f;
+                color: white;
+            }
 
         input[type="button"].btn-outline-danger {
-            background-color: transparent;
-            border: 2px solid #dc3545;
-            color: #dc3545;
+            /*background-color: transparent;*/
+            border: 2px solid #f70a0a;
+            /*color: #dc3545;*/
         }
 
             input[type="button"].btn-outline-danger:hover {
-                background-color: #dc3545;
+                background-color: #a30606;
                 color: white;
             }
-</style>-->
+</style>
 
 @{
     ViewBag.Title = "Agregar un nuevo Usuario";
@@ -387,6 +394,9 @@
                 @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
             </div>
 
+        </div>
+
+        <div class="col-md-6">
             <div class="form-group">
                 @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
@@ -404,8 +414,6 @@
                 @Html.EditorFor(model => model.Contrasena, new { htmlAttributes = new { @class = "form-control", type = "password" } })
                 @Html.ValidationMessageFor(model => model.Contrasena, "", new { @class = "text-danger" })
             </div>
-
-           
 
             <div class="form-group">
                 @Html.LabelFor(model => model.TipoDeUsuario, htmlAttributes: new { @class = "control-label" })
@@ -428,5 +436,5 @@
                 <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Usuario/Index")'" />
             </div>
         </div>
-    }
+     }
 </div>
