--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Edit.cshtml
@@ -6,83 +6,175 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
-<div class="container">
-    @using (Html.BeginForm("Edit", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data", @class = "row g-3" }))
-    {
-        @Html.HiddenFor(model => model.Id)
+        .container {
+            margin-top: 50px;
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Cedula, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Cedula, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Cedula, "", new { @class = "text-danger" })
-        </div>
+        .profile-container {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-        </div>
+            .profile-container h2 {
+                color: #ff2d2d;
+                margin-bottom: 20px;
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PrimerApellido, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.PrimerApellido, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PrimerApellido, "", new { @class = "text-danger" })
-        </div>
+        .form-group label {
+            font-weight: bold;
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SegundoApellido, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.SegundoApellido, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SegundoApellido, "", new { @class = "text-danger" })
-        </div>
+        .form-control {
+            border-radius: 5px;
+            box-shadow: none;
+            border: 1px solid #ced4da;
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Edad, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Edad, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Edad, "", new { @class = "text-danger" })
-        </div>
+            .form-control:focus {
+                border-color: #ff2d2d;
+                box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.25);
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-        </div>
+        .btn-primary {
+            background-color: #ff2d2d;
+            border-color: #ff2d2d;
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
-        </div>
+            .btn-primary:hover {
+                background-color: #0056b3;
+                border-color: #004085;
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
-        </div>
+        .action-link {
+            margin-top: 20px;
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Contrasena, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Contrasena, new { htmlAttributes = new { @class = "form-control", type = "password" } })
-            @Html.ValidationMessageFor(model => model.Contrasena, "", new { @class = "text-danger" })
-        </div>
+            .action-link a {
+                color: #ff2d2d;
+                text-decoration: none;
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TipoDeUsuario, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.TipoDeUsuario, new { htmlAttributes = new { @class = "form-control"} })
-            @Html.ValidationMessageFor(model => model.TipoDeUsuario, "", new { @class = "text-danger" })
-        </div>
+                .action-link a:hover {
+                    text-decoration: underline;
+                }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sexo, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.Sexo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Sexo, "", new { @class = "text-danger" })
+        .alert {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="profile-container">
+            <h2>Editar Perfil</h2>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
+
+                    @Html.HiddenFor(model => model.Id)
+                    @Html.HiddenFor(model => model.Cedula)
+                    @Html.HiddenFor(model => model.Sexo)
+                    @Html.HiddenFor(model => model.Contrasena)
+                    @Html.HiddenFor(model => model.TipoDeUsuario)
+
+
+
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.PrimerApellido, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.PrimerApellido, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.PrimerApellido, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.SegundoApellido, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.SegundoApellido, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.SegundoApellido, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Edad, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Edad, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Edad, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Guardar Cambios" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </div>
+            }
+
+            <div class="action-link">
+                @Html.ActionLink("Regresar", "Index", new { @class = "btn btn-link" })
+            </div>
         </div>
-        <div class="col-12 mt-4">
-            <input type="submit" value="Editar" class="btn btn-success" />
-            <input type="button" class="btn btn-outline-danger ms-2" value="Regresar" onclick="document.location.href = '@Url.Content("~/Usuario/Index")'" />
-        </div>
+    </div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
     }
-</div>
+</body>
+</html>
 
 
 
